# serial-ports-webui

./: .gitignore  AGENTS.md  README.md  package.sh  serial_port.db
.claude/: settings.local.json
backend/: Cargo.toml
backend/src/: db.rs  embedded.rs  main.rs  models.rs  serial.rs  ws.rs
backend/src/api/: capture.rs  macros.rs  mod.rs  ports.rs
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CapturePanel.tsx  MacroPanel.tsx  PortSelector.tsx  Terminal.tsx
frontend/src/lib/: api.ts
